# r2r-template

./: .gitignore  README.md  params_rust.md
ros_ws/src/r2r_package/: CMakeLists.txt  Cargo.toml  package.xml
ros_ws/src/r2r_package/.cargo/: config.toml
ros_ws/src/r2r_package/.r2r/: r2r_cargo.cmake
ros_ws/src/r2r_package/src/ros2time/: main.rs
ros_ws_opencv/: flake.nix
ros_ws_opencv/src/r2r_package_opencv/: CMakeLists.txt  Cargo.toml  package.xml
ros_ws_opencv/src/r2r_package_opencv/.cargo/: config.toml
ros_ws_opencv/src/r2r_package_opencv/src/r2r_opencv/: main.rs
