[package]
name = "r2r_package"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2024"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[[bin]]
name = "ros2time"
path = "./src/ros2time/main.rs"

[dependencies]
r2r = "0.9"
futures = "0.3"
