<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>r2r_package_opencv</name>
  <version>0.0.1</version>
  <description>Template for r2r with opencv</description>
  <maintainer email="math260r@gmail.com">Mathias Balling</maintainer>
  <license>MIT</license>
  <author>Mathias Balling</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rcl_action</build_depend> 

  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_action</exec_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
